sf-hrms/force-app/main/default/objects/Salary_Structure__c/Salary_Structure__c.object-meta.xml
<CustomObject>
    <label>Salary Structure</label>
    <nameField>
        <label>Structure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salary Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>