sf-hrms/force-app/main/default/objects/Salary_Structure__c/fields/Approved_By__c.field-meta.xml
<CustomField><fullName>Approved_By__c</fullName><label>Approved By</label><type>Lookup</type><referenceTo>Employee__c</referenceTo><relationshipLabel>Approved Structures</relationshipLabel><relationshipName>Approved_Structures</relationshipName></CustomField>