sf-hrms/force-app/main/default/objects/Salary_Structure__c/fields/Approved_On__c.field-meta.xml
<CustomField><fullName>Approved_On__c</fullName><label>Approved On</label><type>Date</type></CustomField>