sf-hrms/force-app/main/default/objects/Salary_Structure__c/fields/Employee__c.field-meta.xml
<CustomField><fullName>Employee__c</fullName><label>Employee</label><type>Lookup</type><referenceTo>Employee__c</referenceTo><relationshipLabel>Salary Structure Records</relationshipLabel><relationshipName>Salary_Structure_Records</relationshipName></CustomField>