sf-hrms/force-app/main/default/objects/Salary_Structure__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Draft</fullName><default>true</default></value><value><fullName>Active</fullName><default>false</default></value><value><fullName>Superseded</fullName><default>false</default></value></valueSetDefinition></valueSet></CustomField>