sf-hrms/force-app/main/default/objects/Salary_Structure__c/fields/Total_CTC__c.field-meta.xml
<CustomField><fullName>Total_CTC__c</fullName><label>Total CTC</label><type>Currency</type><precision>18</precision><scale>2</scale></CustomField>